clusters/ipc/flux-system/kustomize-controller-metrics-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustomize-controller-metrics
  namespace: flux-system
spec:
  type: NodePort
  selector:
    app: kustomize-controller
  ports:
    - name: http-prom
      port: 8080
      targetPort: 8080
      nodePort: 30880
